@@ -1,7 +1,8 @@
 For 1.18.2:
 	- Desktop integration on Linux platforms. (Sarah Dumoulin)
 
-	- more automated build in Makefile.PL (John Stewart)
+	- more automated build in Makefile.PL (John Stewart) to better handle
+	  Motif library inclusion. (including code rewrites in CFrontEnd)
 
 For 1.18.1:
 	- more PROTO work for experimental parser (Daniek Kraft)
